service/serviceclusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: myserviceclusterip
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
