service/serviceclusterip2.yml
apiVersion: v1
kind: Service
metadata:
  name: myserviceclusterip2
spec:
  selector:
    app: frontend2
  ports:
    - port: 80
      targetPort: 80
