service/servicedeploy.yml
apiVersion: v1
kind: Service
metadata:
  name: myservicedeploy
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
