service/serviceloadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: myserviceloadbalancer
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
