service/servicenodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: myservicnodeport
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  type: NodePort
