service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:

  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /bin
            pathType: Prefix
            backend:
              service:
                name: myserviceclusterip2
                port:
                  number: 80
